编写返回所有宽表和派生指标核心数据接口