@@ -5,14 +5,15 @@ import com.yanggu.metric_calculate.core.field_process.dimension.DimensionSet;
 import com.yanggu.metric_calculate.core.middle_store.DeriveMetricMiddleStore;
 import com.yanggu.metric_calculate.flink.pojo.DeriveCalculateData;
 import lombok.Data;
+import lombok.EqualsAndHashCode;
 import org.apache.flink.configuration.Configuration;
 import org.apache.flink.streaming.api.functions.ProcessFunction;
 import org.apache.flink.util.Collector;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static com.yanggu.metric_calculate.flink.util.Constant.DERIVE_METRIC_MIDDLE_STORE;
 
@@ -20,8 +21,10 @@ import static com.yanggu.metric_calculate.flink.util.Constant.DERIVE_METRIC_MIDD
  * 攒批读
  */
 @Data
+@EqualsAndHashCode(callSuper = true)
 public class BatchReadProcessFunction extends ProcessFunction<List<DeriveCalculateData>, DeriveCalculateData> implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = -3855414494042599733L;
 
     private transient DeriveMetricMiddleStore deriveMetricMiddleStore;
@@ -37,12 +40,15 @@ public class BatchReadProcessFunction extends ProcessFunction<List<DeriveCalcula
                                Collector<DeriveCalculateData> out) throws Exception {
         List<DimensionSet> collect = inputList.stream()
                 .map(DeriveCalculateData::getDimensionSet)
-                .collect(Collectors.toList());
+                .distinct()
+                .toList();
         Map<DimensionSet, MetricCube> dimensionSetMetricCubeMap = deriveMetricMiddleStore.batchGet(collect);
         for (DeriveCalculateData input : inputList) {
             DimensionSet dimensionSet = input.getDimensionSet();
             MetricCube historyMetricCube = dimensionSetMetricCubeMap.get(dimensionSet);
-            input.setMetricCube(historyMetricCube);
+            if (historyMetricCube != null) {
+                input.setMetricCube(historyMetricCube);
+            }
             out.collect(input);
         }
     }
